# DCC-Central

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: BuildAndTest.yml
cmake/: version.cmake
config/: DCCCentral.xml
include/Central/: Address.hpp  CentralManager.hpp  CommandOptions.hpp  Configuration.hpp  DccCommandManager.hpp  Helpers.hpp  Logger.hpp  XmlHelpers.hpp  XmlTags.hpp
include/Central/Configuration/: Configuration.hpp  XmlHelpers.hpp  XmlTags.hpp
include/Central/Configuratoin/: Configuration.hpp
include/Central/Helpers/: Address.hpp  CommandOptions.hpp  Helpers.hpp
include/Central/Manager/: AccessoryManager.hpp  DccCommandManager.hpp  DccTrackManager.hpp  InfoManager.hpp  LocosManager.hpp  SensorsManager.hpp  TrackManager.hpp  TurnoutManager.hpp
include/Common/: Accessory.hpp  AccessoryDecode.hpp  AccessoryDecoder.hpp  CommandManager.hpp  IndexHelper.hpp  Loco.hpp  LocoCache.hpp  Sensor.hpp  SensorCache.hpp  Turnout.hpp  TurnoutCache.hpp  Turntables.hpp
include/DccExParser/: AccessoryInterface.hpp  CommandInterface.hpp  DccExBasicParser.hpp  DccExCommadConverter.hpp  DccExCommandConverter.hpp  DccExParser.hpp  DccTcpServer.hpp  DccTcpSession.hpp  DccTrackInterface.hpp  Helpers.hpp  InfoInterface.hpp  LocoInterface.hpp  SensorsInterface.hpp  TrackInterface.hpp  TurnoutInterface.hpp
include/DccProtocol/: DccCommandGenerator.hpp  DccConstants.hpp  DccInterface.hpp  DccProgrammingCommandGenerator.hpp  DccProgrammingInterface.hpp
include/RaspberryDMA/: ADCControl.hpp  I2CControl.hpp  MainTrack.hpp  ProgrammingTrack.hpp  README.md
include/RestApi/: Context.hpp  Router.hpp  Server.hpp
include/RestApi/Serializers/: Accessory.hpp  Loco.hpp  Sensor.hpp  Turnout.hpp
src/: CMakeLists.txt
src/Central/: Address.cpp  CMakeLists.txt  CentralManager.cpp  CommandOptions.cpp  Configuration.cpp  Helpers.cpp  Logger.cpp  XmlHelpers.cpp  main.cpp
src/Central/Configuration/: Configuration.cpp  XmlHelpers.cpp
src/Central/Helpers/: Address.cpp  CommandOptions.cpp  Helpers.cpp  Logger.cpp
src/Central/Manager/: AccessoryManager.cpp  DccTrackManager.cpp  InfoManager.cpp  LocosManager.cpp  SensorsManager.cpp  TrackManager.cpp  TurnoutManager.cpp
src/DccExParser/: CMakeLists.txt  DccExBasicParser.cpp  DccExCommandConverter.cpp  DccExParser.cpp  Helpers.cpp  InfoInterface.cpp
src/DccProtocol/: CMakeLists.txt  DccCommandGenerator.cpp  DccProgrammingCommandGenerator.cpp
src/RaspberryDMA/: CMakeLists.txt
src/RestApi/: CMakeLists.txt  Context.cpp  Router.cpp  Server.cpp
src/RestApi/Serializers/: Accessory.cpp  Loco.cpp  Sensor.cpp  Turnout.cpp
test/: CMakeLists.txt
test/Central/: CMakeLists.txt  TestAccessory.cpp  TestConfiguration.cpp  TestXmlHelpers.cpp
test/Common/: CMakeLists.txt  TestAccessory.cpp  TestLoco.cpp  TestSensor.cpp  TestTurnout.cpp
test/DccExParser/: CMakeLists.txt  TestDccExBasicParser.cpp  TestDccExCommandConverter.cpp  TestDccExHelpers.hpp  TestDccExInfoCommands.cpp  TestDccExLocoCommands.cpp  TestDccExParser.cpp  TestDccExSensorsCommands.cpp  TestDccExStatusCommands.cpp  TestDccExTrackCommands.cpp
test/DccProtocol/: CMakeLists.txt  TestDccCommandGenerator.cpp  TestDccHelpers.hpp  TestDccProgrammingGenerator.cpp  TestDccProgrammingHelpers.hpp
test/RestApi/: CMakeLists.txt
test/RestApi/Serializers/: TestAccessory.cpp  TestLoco.cpp  TestSensor.cpp  TestTurnout.cpp
