
add_library(${LIB_DCC_EX_PARSER}
    DccExBasicParser.cpp
    DccExCommandConverter.cpp
    Helpers.cpp
)

target_include_directories(${LIB_DCC_EX_PARSER} 
    PRIVATE ${INCLUDE_DIRECTORIES}/DccExParser
    PRIVATE ${INCLUDE_DIRECTORIES}/Common
)

target_compile_definitions(${LIB_DCC_EX_PARSER} 
    PRIVATE DCC_PROTOCOL_VERSION_1=${DCC_PROTOCOL_VERSION_1}
    PRIVATE DCC_PROTOCOL_VERSION_2=${DCC_PROTOCOL_VERSION_2}
    PRIVATE DCC_PROTOCOL_VERSION_3=${DCC_PROTOCOL_VERSION_3}
    PRIVATE DCC_PROTOCOL_VERSION_4=${DCC_PROTOCOL_VERSION_4}    
)
